--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*Estilização da Barra de Navegação*/
 .navbar{
-	position: fixed;
+	/*position: fixed;*/
 	width: 100%;
 	height:100px;
 	background-color: #f8f9fa;
@@ -217,4 +217,41 @@
 	margin-top: 5%;
 	height:300px;
 	width:450px; 
+}
+/*SOBRE NÓS*/
+
+#sobre{
+	width: 100%;
+	float: left;
+	height: 300px;
+}
+#sobre h1{
+	margin-left: 5%;
+	margin-top: 5%;
+	color: #4c4f4d;
+}
+#historia{
+	width: 100%;
+	float: left;
+	height: 300px;
+}
+#historia h1{
+	margin-top: 3%;
+	margin-left: 5%;
+	color: #4c4f4d;
+}
+
+#sobre p{
+	font-size: 1.5em;
+	margin-left: 5%;
+	margin-right: 5%;
+	text-align: justify;
+	color: #4c4f4d;
+}
+#historia p{
+	font-size: 1.5em;
+	margin-left: 5%;
+	margin-right: 5%;
+	text-align: justify;
+	color: #4c4f4d;
 }
